--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
